// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleInput should render caption 1`] = `
<div>
  <label
    aria-checked="true"
    class="label container"
    for="toggle-button-7"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-7"
      name="toggle-button-7"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <div
      class="label"
    >
      Label
    </div>
  </label>
  <div
    class="caption caption"
  >
    caption
  </div>
</div>
`;

exports[`ToggleInput should render label 1`] = `
<div>
  <label
    aria-checked="true"
    class="label container"
    for="toggle-button-6"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-6"
      name="toggle-button-6"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <div
      class="label"
    >
      Label
    </div>
  </label>
</div>
`;

exports[`ToggleInput should render the button disabled 1`] = `
<div>
  <label
    aria-checked="true"
    class="label isDisabled container disabledLabel"
    for="toggle-button-4"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-4"
      name="toggle-button-4"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <div
      class="label"
    />
  </label>
</div>
`;

exports[`ToggleInput should render the button loading 1`] = `
<div>
  <label
    aria-checked="true"
    class="label container loadingLabel"
    for="toggle-button-3"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-3"
      name="toggle-button-3"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <svg
      class="spinner left"
      viewBox="0 0 20 20"
    >
      <circle
        class="dot"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="circle"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
    </svg>
    <div
      class="label"
    />
  </label>
</div>
`;

exports[`ToggleInput should render the button loading and disabled 1`] = `
<div>
  <label
    aria-checked="true"
    class="label isDisabled container loadingLabel disabledLabel"
    for="toggle-button-5"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-5"
      name="toggle-button-5"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <svg
      class="spinner left"
      viewBox="0 0 20 20"
    >
      <circle
        class="dot"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="circle"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
    </svg>
    <div
      class="label"
    />
  </label>
</div>
`;

exports[`ToggleInput should render the checkbox checked 1`] = `
<div>
  <label
    aria-checked="true"
    class="label container"
    for="toggle-button-1"
    role="switch"
  >
    <input
      checked=""
      class="input"
      disabled=""
      id="toggle-button-1"
      name="toggle-button-1"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <div
      class="label"
    />
  </label>
</div>
`;

exports[`ToggleInput should render the checkbox unchecked 1`] = `
<div>
  <label
    aria-checked="false"
    class="label container"
    for="toggle-button-2"
    role="switch"
  >
    <input
      class="input"
      disabled=""
      id="toggle-button-2"
      name="toggle-button-2"
      type="checkbox"
    />
    <div
      class="slider"
    />
    <div
      class="label"
    />
  </label>
</div>
`;
